--- a/Views/Users/Delete.cshtml
+++ b/Views/Users/Delete.cshtml
@@ -1,6 +1,5 @@
 ﻿    <!-- AAAND here we go -->
-
-@model Apptivate_UQMS_WebApp.Models.Users
+@model Apptivate_UQMS_WebApp.Models.AppUsers
 
 @{
     ViewData["Title"] = "Delete";
