--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿    <!-- AAAND here we go -->
-
-@model IEnumerable<Apptivate_UQMS_WebApp.Models.Users>
+@model IEnumerable<Apptivate_UQMS_WebApp.Models.AppUsers>
 
 @{
     ViewData["Title"] = "Index";
