--- a/Views/Users/UserManagement.cshtml
+++ b/Views/Users/UserManagement.cshtml
@@ -101,7 +101,7 @@
                             <tr>
                                 <td>@user.Name @user.Surname</td>
                                 <td>@user.Email</td>
-                                <td>@user.LastSeen?.ToString("dd MMM yyyy HH:mm:ss") ?? "Never"</td>
+                                <td>@user.LastSeen?.ToString("dd MMM yyyy HH:mm:ss")</td>
                                 <td>@user.Role</td>
                                 <td>
                                     <a href="@Url.Action("Edit", "Users", new { id = user.UserID })" title="Edit" class="action-icon">
